- Fix path for real

--- a/diffiehellman.pc.in
+++ b/diffiehellman.pc.in
@@ -3,4 +3,4 @@ Description: @ASSEMBLY_DESCRIPTION@
 Version: @ASSEMBLY_VERSION@
 
 Requires: 
-Libs: -r:@libdir@/@ASSEMBLY_PACKAGE@/DiffieHellman.dll
+Libs: -r:@libdir@/mono/@ASSEMBLY_PACKAGE@/DiffieHellman.dll
