- Add version to assembly

--- a/src/AssemblyInfo.cs.in
+++ b/src/AssemblyInfo.cs.in
@@ -4,4 +4,4 @@
 [assembly: AssemblyDescription("@ASSEMBLY_DESCRIPTION@")]
 [assembly: AssemblyDelaySign(false)]
 [assembly: AssemblyKeyFile("@ASSEMBLY_KEYFILE@")]
-
+[assembly: AssemblyVersion("@ASSEMBLY_VERSION@")]
